More effort in making log messages less numerous and more relevant when the EPSG database is not available.